# MPASO-WMTs

./: .gitignore  MPASO-WMT.yml  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
MPAS-O_WMTs/WMT_NBs/: baby_transects.ipynb
WMT_NBs/: baby_transects.ipynb
ci/: lanl_env.yml
mpasregions/: __init__.py  sections.py  version.py
mpasregions/.ipynb_checkpoints/: sections-checkpoint.py  version-checkpoint.py
mpasregions/tests/: test_create_find_sort_transects.ipynb  test_create_transect_from_alg.ipynb  test_find_and_sort_transects.ipynb  test_small_ds.ipynb  test_sort_transects.ipynb
notebooks/: .LS_test_transect_from_alg.geojson  10-16_ds_restruc_data_compute_transports.ipynb  10-16_restruc_data_compute_transports.ipynb  10-20_restruc_data_compute_transports.ipynb  10-24_restruc_data_compute_transports.ipynb  Initial_plots.ipynb  LS_test_masks.nc  LS_test_transect_from_alg.geojson  LS_test_transect_from_alg_mask.nc  LS_test_transect_from_mask.geojson  MpasCellCuller.x  SO_region_test_transect_from_alg.geojson  SO_region_test_transect_from_mask.geojson  Untitled.ipynb  baby_transects.ipynb  baby_transects_1In1Out.ipynb  baby_transects_alg.ipynb  compute_transports.ipynb  create_transects.ipynb  fix_lons.ipynb  global_surface_flux_attempt.ipynb  region_mask_attempt.ipynb  restruc_data_compute_transports.ipynb
notebooks/.ipynb_checkpoints/: 10-16_restruc_data_compute_transports-checkpoint.ipynb  Initial_plots-checkpoint.ipynb  baby_transects-checkpoint.ipynb  (+2 more)
test_dir/: demo.sh  nano_shortcuts.txt  new_file_test.txt  uv_deriv.py
(+1 files in other folders)
