[project]
name = "mpasregions"
dynamic = ["version"]
authors = [
    {name="Henri F. Drake", email="hfdrake@uci.edu"},
]
description = "A package for creating xgcm-grid consistent regional masks and boundaries"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "mpasregions/version.py"